# translate_this_bot

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: flake8.yml
telegram_bot/: bot.py
telegram_bot/scripts/: telebot.py
telegram_bot/utils/: layout.py  messages.py  translations.py
utils/: translations.py
